[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "home-assistant-mqtt-pydantic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.0",
    "pytest>=8.0.0",
]

[tool.ruff]
line-length = 120
target-version = "py313"
exclude = ["core", "script", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PYI", "RUF"]
ignore = ["RUF012"] # Mutable class attributes are common in Pydantic and handled correctly

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
exclude = ["core", "script"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["core", ".venv"]
pythonpath = ["."]

[tool.hatch.build.targets.wheel]
packages = ["ha_mqtt_models_pydantic"]
